--- a/styles.css
+++ b/styles.css
@@ -524,6 +524,17 @@ a
     color: black;
     padding-bottom: 15px;
 }
+@media screen and (min-width:1440px)
+{
+    body
+    {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+    
+}
 @media screen and (max-width:1100px) and (min-width: 640px)
 {
     /* HEADER*/
